added sqladmin, rr_check tested, download problem

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -14,123 +14,11 @@
 
 {% include page %}
 
-<!-- Modal registration block -->
-<div id="id01" class="modal">
-  <div class="modal-content animate info" style="width: 350px; height: 200px;">
-    <div class="login-container">
-        <div>
-            <label for="username"><b>Логин</b></label>
-            <input id="reg_uname" style="margin-left:12px;" type="text" placeholder="Придумайте логин" name="username" required>
-        </div>
-        <div>
-            <label for="password"><b>Пароль</b></label>
-            <input id="reg_psw" type="password" placeholder="Придумайте пароль" name="password" required>
-        </div>
-      <span id="reg_wrong_credentials"</span>
-      <div style="text-align: center;">
-        <button onclick="registerUser()">Зарегистрироваться</button>
-      </div>
-    </div>
-  </div>
-</div>
- <script>
-    // Get the modal
-  var modal = document.getElementById('id01');
+{% if modal %}
+    {% include modal if modal %}
+{% else %}
+{% endif %}
 
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-      if (event.target == modal) {
-          modal.style.display = "none";
-      }
-  }
-  // document.querySelector('[type=submit]').addEventListener('click', registerUser);
-
-    async function registerUser() {
-        const url = "http://localhost:8000/auth/register";
-        const wrongCredentialsSpan = document.getElementById("reg_wrong_credentials");
-        const formData = new FormData();
-        formData.append('username', document.getElementById("reg_uname").value);
-        formData.append('password', document.getElementById("reg_psw").value);
-
-        await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: formData,
-        }).then(response => {
-            if (response.status === 201) {
-                window.location.href = "/"
-            } else {
-                wrongCredentialsSpan.textContent = "Неверный логин или пароль";
-            }
-        });
-    }
-
-    async function loginUser() {
-        const wrongCredentialsSpan = document.getElementById("wrong_credentials");
-        wrongCredentialsSpan.textContent = "";
-
-        const url = "http://localhost:8000/auth/login";
-        const username = document.getElementById("login_uname").value;
-        const password = document.getElementById("login_psw").value;
-
-        await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({username: username, password: password}),
-        }).then(response => {
-            if (response.status === 200) {
-                window.location.href = "/rr"
-            } else {
-                wrongCredentialsSpan.textContent = "Что-то пошло не так";
-            }
-        });
-    }
-
-    async function rrDownload(query_id, query_name) {
-        const url = "http://localhost:8000/rr/download";
-        await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({query_id: query_id, query_name: query_name}),
-        }).then(response => {});
-    }
-
-    async function rrReorder(query_id) {
-        const url = "http://localhost:8000/rr/reorder";
-        await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({query_id: query_id}),
-        }).then(response => {});
-    }
-
-    async function query() {
-        const url = "http://localhost:8000/rr/query";
-        const project = document.getElementById("prj_name").value;
-        const q_simple = document.getElementById("query_s").value;
-        const q_history = document.getElementById("query_h").value;
-
-        await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({project: project, query_s: q_simple, query_h: q_history}),
-        }).then(response => {
-            if (response.status === 200) {
-                window.location.href = "/rr"
-            } else {}
-        });
-    }
-
- </script>
+<script src="{{ url_for('static', path='/scripts.js') }}"></script>
 </body>
 </html>
