--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,17 +1,15 @@
 body {
   font-family: Monaco, Helvetica, sans-serif;
-  /* background: linear-gradient(45deg, #ffffff, #eee); */
 }
 h1 {
   text-align: center;
 }
 .content {
-  /* max-width: 900px; */
   margin: auto;
   padding: 50px 30px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  border-radius: 30px; /* 5px rounded corners */
+  border-radius: 30px;
 }
 .content:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
@@ -100,7 +98,6 @@ hr {
 
  /* Add a black background color to the top navigation */
 .topnav {
-    /* background-color: #eee; */
     background: linear-gradient(45deg, #eee, #ffffff);
     overflow: hidden;
     border-radius: 15px;
@@ -110,7 +107,6 @@ hr {
 .topnav a {
     float: left;
     display: block;
-  /* color: #f2f2f2; */
     color: black;
     text-align: center;
     padding: 14px 16px;
@@ -223,7 +219,6 @@ input[type=checkbox] {
  .tab-content {
   max-height: 0;
   padding: 0 1em;
-  color: #2c3e50;
   transition: all 0.35s;
 }
  .tab-close {
@@ -231,7 +226,6 @@ input[type=checkbox] {
   justify-content: flex-end;
   padding: 1em;
   font-size: 0.75em;
-  background: #2c3e50;
   cursor: pointer;
 }
  .tab-close:hover {
@@ -250,7 +244,6 @@ input[type=checkbox] {
 
 /* TABLE */
 table {
-  /* width: 800px; */
   border-collapse: collapse;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -258,7 +251,6 @@ table {
  th, td {
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.2);
-  color: #2c3e50;
 }
  th {
   text-align: left;
