--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -4,7 +4,7 @@
     <div class="tabs">
       <div class="tab">
         <input type="checkbox" id="chck1">
-        <label class="tab-label" for="chck1">Разместить заказ</label>
+        <label class="tab-label" for="chck1" style="background: linear-gradient(45deg, #eee, #ffffff);">Разместить заказ</label>
         <div class="tab-content">
           <div class="info">
             <h2>Заказ текстом</h2>
@@ -26,7 +26,7 @@
                 <textarea type="text" id="query_h" placeholder="кадастровые номера через <enter>" style="resize: none; height: 100px; width: 245px; margin: 5px 0px 10px 0px;"></textarea>
               </div>
             </div>
-            <Button onclick="query()">отправить запрос</Button>
+            <Button onclick="rrQuery()">отправить запрос</Button>
           </div>
 
           <hr hidden>
@@ -45,7 +45,7 @@
       </div>
       <div class="tab">
         <input type="checkbox" id="chck2">
-        <label class="tab-label" for="chck2">Поиск недвижимости</label>
+        <label class="tab-label" for="chck2" style="background: linear-gradient(45deg, #eee, #ffffff);">Поиск недвижимости</label>
         <div class="tab-content">
           <div class="info">
             <h2>Поиск по адресу или кадастровому номеру</h2>
@@ -62,11 +62,18 @@
       {% for query in queries %}
       <div class="tab">
         <input type="checkbox" id="{{query.id}}">
-        <label class="tab-label" for="{{query.id}}">{{query.name}}</label>
+        <label class="tab-label" for="{{query.id}}" style="display: block; text-align: right; background: linear-gradient(45deg, #ffffff, #eee);">{{ query.name }}</label>
         <div class="tab-content">
-          <input value="скачать" type="button" onClick="rrDownload({{ query.id }},'{{ query.name }}')" />
-          <input value="перезаказать" type="button" onClick="rrReorder({{ query.id }})" />
-          <table>
+          <button title="Скачать" style="padding: 5px;" onClick="rrDownload({{ query.id }},'{{ query.name }}')">
+            <img width="30" src="{{ url_for('static', path='icon_download.svg') }}" />
+          </button>
+          <button title="Перезаказать" style="padding: 5px; margin-left: 480px;" onClick="rrReorder({{ query.id }})" />
+            <img width="30" src="{{ url_for('static', path='icon_reorder.svg') }}" />
+          </button>
+          <button hidden title="Обновить в ручную" style="padding: 5px;" onClick="rrRefresh({{ query.id }})">
+            <img width="30" src="{{ url_for('static', path='icon_refresh.svg') }}" />
+          </button>
+          <table style="margin-top: 15px;">
             <thead>
               <tr>
                 <th>Кадастр</th>
@@ -81,7 +88,7 @@
                 <td>{{ order.cadastral }}</td>
                 <td>{{ order.cadastral_type }}</td>
                 <td>{{ order.created_at }}</td>
-                <td><span title="{{ order.detail }}">{{ order.status }}</span></td>
+                <td><span title="{{ order.status_txt }}">{{ order.status }}</span></td>
               </tr>
               {% endfor %}
             </tbody>
