--- a/app/templates/top_panel.html
+++ b/app/templates/top_panel.html
@@ -1,5 +1,7 @@
 <div class="topnav">
-  <img href="index.html" style="float: left; margin-left: 15px; margin-right: 15px;" width="50" src="{{ url_for('static', path='logo.svg') }}" />
+  <a href="/" style="padding: 0px 10px 0px 10px; border: None;">
+    <img width="50" src="{{ url_for('static', path='logo.svg') }}" />
+  </a>
   <a class="active" href="/rr">Росреестр</a>
   <a href="/fr">Федресурс</a>
   <a href="/flight">Перелеты</a>
