--- a/app/templates/log-reg.html
+++ b/app/templates/log-reg.html
@@ -6,7 +6,7 @@
             <div class="other" style="text-align: center;">
                 <div style="margin: 20px;">
                     <h2>Авторизация</h2>
-                    <label for="username", style="margin-right:12px;">Логин</label>
+                    <label for="username" style="margin-right:12px;">Логин</label>
                     <input id="login_uname" name="username" type="text" value="" placeholder="agent007">
                 </div>
                 <div style="margin: 20px;">
