--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>Работа с РОСРЕЕСТРом</h1>
+  <h1>Выписки ЕГРН</h1>
   <div class="content" style="width: 600px;">
     <div class="tabs">
       <div class="tab">
