--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -7,7 +7,7 @@
         <label class="tab-label" for="chck1" style="background: linear-gradient(45deg, #eee, #ffffff);">Разместить заказ</label>
         <div class="tab-content">
           <div class="info">
-            <h2>Заказ текстом</h2>
+            <h2>Заказ</h2>
             <div style="margin-bottom: 20px;">
               <label>Проект:</label>
               <input type="text" id="prj_name" placeholder="опционально (если не задать, присвоится автоматически)" style="height: 10px; width: 448px; margin: 10px 0px 10px 0px;">
