--- a/app/templates/top_panel.html
+++ b/app/templates/top_panel.html
@@ -4,8 +4,8 @@
   </a>
   <a href="/rr" class={{ "active" if page == "rr.html" else " " }}>Росреестр</a>
   <a href="/fr" class={{ "active" if page == "fr.html" else " " }}>Федресурс</a>
-  <a href="/flight" class={{ "active" if page == "flight.html" else " " }}>Перелеты</a>
-  <a href="/london" class={{ "active" if page == "london.html" else " " }}>Недвижимость Лондона</a>
+  <!-- <a href="/flight" class={{ "active" if page == "flight.html" else " " }}>Перелеты</a>
+       <a href="/london" class={{ "active" if page == "london.html" else " " }}>Недвижимость Лондона</a> -->
   <a href="{{ TG_CHANNEL }}">TG-канал</a>
   <a href="{{ TG_BOT }}">TG-bot</a>
   <!-- <button style="float: right;" onclick="document.getElementById('id01').style.display='block'">Войти</button> -->
