--- a/app/templates/top_panel.html
+++ b/app/templates/top_panel.html
@@ -1,6 +1,6 @@
 <div class="topnav">
   <a href="/" style="padding: 0px 10px 0px 10px; border: None;">
-    <img width="50" src="{{ url_for('static', path='logo.svg') }}" />
+    <img width="50" src="static/logo.svg" />
   </a>
   <a href="/rr" class={{ "active" if page == "rr.html" else " " }}>Росреестр</a>
   <a href="/fr" class={{ "active" if page == "fr.html" else " " }}>Федресурс</a>
