--- a/app/templates/log-reg.html
+++ b/app/templates/log-reg.html
@@ -1,5 +1,5 @@
 <div style="display: flex;">
-    <div style="overflow: hidden; width: 100%; height: 909px; background: url({{ url_for('static', path='logo.svg') }}) no-repeat right; background-size: 4500px;"></div>
+    <div style="overflow: hidden; width: 100%; height: 909px; background: static/logo.svg no-repeat right; background-size: 4500px;"></div>
     
     <div class="content" align="right" style="width: 30%; margin: auto; margin-right: 200px;">
         <div class="info">
