--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>{{ SITE_NAME }}</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/favicon.svg') }}" rel="shortcut icon" type="image/svg"/>
+    <link href="static/styles.css" rel="stylesheet">
+    <link href="static/favicon.svg" rel="shortcut icon" type="image/svg"/>
 </head>
 {% if top_panel is not none %}
     {% include top_panel if top_panel %}
@@ -19,6 +19,6 @@
 {% else %}
 {% endif %}
 
-<script src="{{ url_for('static', path='/scripts.js') }}"></script>
+<script src="static/scripts.js"></script>
 </body>
 </html>
