--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,7 +1,23 @@
+@font-face {
+  font-family: "siteFont";
+  src: url("/static/siteFont-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+ }
+
+@font-face {
+  font-family: "siteFontBold";
+  src: url("/static/siteFont-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
 body {
+  /* font-family: "siteFont", Monaco, Helvetica, sans-serif; */
   font-family: Monaco, Helvetica, sans-serif;
 }
 h1 {
+  font-family: "siteFontBold";
   text-align: center;
 }
 .content {
