--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,5 +1,7 @@
 <div style="text-align: center;">
-    <img src="/static/error.svg" style="position: relative; height: 600px; display: block; margin: 0 auto;">
+    <a href="/">
+        <img src="/static/error.svg" style="position: relative; height: 600px; display: block; margin: 0 auto;">
+    </a>
     <h1 style="position:absolute; top:300px; left:0; width:100%; font-size:60px; color:white;">
         {{ error.status_code }}
     </h1>
