--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -34,7 +34,7 @@
             <h2>Постановка на мониторинг</h2>
             <div>
               <input type="text"   id="monitoring_cadastral" placeholder="XX:XX:XXXXXXX:XX" style="height: 10px; width: 140px; margin: 0px 0px 10px 0px;">
-              <input type="text" id="prj_name_mon" placeholder="Проект - опционально" style="height: 10px; width: 350px; margin: 10px 0px 0px 0px;">
+              <input type="text" id="prj_name_mon" maxlength="20" placeholder="Проект - опционально" style="height: 10px; width: 350px; margin: 10px 0px 0px 0px;">
             </div>
             <div style="display: flex;">
               <button onclick="rrMonQuery()" style="width: 240px; margin-right: 10px;">отправить запрос</button>
@@ -69,11 +69,20 @@
 
       <div class="tab">
         <input type="checkbox" id="monitoring">
-        <label class="tab-label" for="monitoring" style="display: block; text-align: right; background: linear-gradient(45deg, #ffffff, #eee);">На мониторинге</label>
+        <label class="tab-label" for="monitoring" style="display: block; text-align: right; background: linear-gradient(45deg, #ffffff, #eee);">мониторинг</label>
         <div class="tab-content">
           <div class="info">
             <h2>Мониторинг</h2>
-            <table style="margin: 15px 0px 15px 15px; font-size: 10px;">
+            <table id="monTable" style="margin: 15px 0px 0px 5px; font-size: 10px; width:520px;table-layout: fixed;">
+              <colgroup>
+                <col width="50px">
+                <col width="60px">
+                <col width="30px">
+                <col width="30px">
+                <col width="20px">
+                <col width="40px">
+                <col width="10px">
+              </colgroup>
               <thead>
                 <tr>
                   <th>Кадастровый №</th>
@@ -82,7 +91,7 @@
                   <th>Дата по</th>
                   <th>Интер- вал, ч</th>
                   <th>Статус</th>
-                  <th>Удалить</th>
+                  <th></th>
                 </tr>
               <thead>
               <tbody>
