--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -4,7 +4,7 @@
     <div class="tabs">
       <div class="tab">
         <input type="checkbox" id="chck1">
-        <label class="tab-label" for="chck1" style="background: linear-gradient(45deg, #eee, #ffffff);">Добавить</label>
+        <label class="tab-label" for="chck1" style="background: linear-gradient(45deg, #eee, #ffffff);">добавить</label>
         <div class="tab-content">
           <div class="info">
             <h2>Заказ</h2>
@@ -69,7 +69,7 @@
 
       <div class="tab">
         <input type="checkbox" id="monitoring">
-        <label class="tab-label" for="monitoring" style="display: block; text-align: right; background: linear-gradient(45deg, #ffffff, #eee);">мониторинг</label>
+        <label class="tab-label" for="monitoring" style="display: block; text-align: center; background: #eee;">мониторинг</label>
         <div class="tab-content">
           <div class="info">
             <h2>Мониторинг</h2>
